Add parmigiana page body and fix title
Created folder in recipes/ called recipes-images/ which a stock image of chicken parmigiana was added to.

-added body to chicken-parmigiana.html
-fixed title of index.html to "Recipe Project"
-added relative path link for chicken-parmigiana.html to index.html

--- a/recipes/chicken-parmigiana.html
+++ b/recipes/chicken-parmigiana.html
@@ -8,5 +8,17 @@
 </head>
 <body>
     <h1>Chicken Parmigiana</h1>
+    <img src="recipe-images/chicken-parmigiana.jpeg" width="375" height="250" alt="Stock photo of chicken parmigiana">
+    <h2>Description</h2>
+    <p>This is an Australian favorite that your family will <em>love!</em></p>
+    <h2>Ingredients</h2>
+    <p><h3>Steps:</h3></p>
+    <ol>
+        <li>Preheat the oven to 350 degrees F (175 degrees C). Lightly grease a medium baking sheet.</li>
+        <li>Pour egg into a small shallow bowl. Place bread crumbs in a separate shallow bowl. Dip chicken into egg, then into bread crumbs. Place coated chicken on the prepared baking sheet.</li>
+        <li>Bake in the preheated oven until no longer pink and juices run clear, about 40 minutes. Remove from the oven.</li>
+        <li>Pour 1/2 of the spaghetti sauce into a 7x11-inch baking dish. Place chicken breasts over the sauce, then cover with remaining sauce. Sprinkle mozzarella and Parmesan cheeses on top. Continue baking until heated through and cheeses have melted, about 20 more minutes.</li>
+        <li>Ready to serve alongside some mash potato and veggies!</li>
+    </ol>
 </body>
 </html>
