--- a/recipes/chicken-parmigiana.html
+++ b/recipes/chicken-parmigiana.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Chicken Parmigiana Recipe</title>
 </head>
 <body>
     <h1>Chicken Parmigiana</h1>
-    <img src="recipe-images/chicken-parmigiana.jpeg" width="375" height="250" alt="Stock photo of chicken parmigiana">
+    <a href="../index.html">Home</a>
+    <p><img src="recipe-images/chicken-parmigiana.jpeg" width="375" height="250" alt="Stock photo of chicken parmigiana"></p>
     <h2>Description</h2>
     <p>This is an Australian favorite that your family will <em>love!</em></p>
     <h2>Ingredients</h2>
