Add <ul> steps to body

--- a/recipes/chicken-parmigiana.html
+++ b/recipes/chicken-parmigiana.html
@@ -13,6 +13,16 @@
     <h2>Description</h2>
     <p>This is an Australian favorite that your family will <em>love!</em></p>
     <h2>Ingredients</h2>
+    <p>
+        <ul>
+            <li>1 egg, beaten</li>
+            <li>2 ounces dry bread crumbs</li>
+            <li>2 skinless, boneless chicken breast halves</li>
+            <li>¾ (16 ounce) jar spaghetti sauce</li>
+            <li>2 ounces shredded mozzarella cheese</li>
+            <li>¼ cup grated Parmesan cheese</li>
+        </ul>
+    </p>
     <p><h3>Steps:</h3></p>
     <ol>
         <li>Preheat the oven to 350 degrees F (175 degrees C). Lightly grease a medium baking sheet.</li>
