Add additional recipes
Added two additional recipe .html pages for pizza and spaghetti in Line
with chicken-parmigiana.html format.

-added jpegs for both new recipes to image folder and linked in page
-added body text to both recipe's respective pages
-added links to index for new recipes

--- a/recipes/chicken-parmigiana.html
+++ b/recipes/chicken-parmigiana.html
@@ -1,35 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0">
     <title>Chicken Parmigiana Recipe</title>
 </head>
+
 <body>
     <h1>Chicken Parmigiana</h1>
     <a href="../index.html">Home</a>
-    <p><img src="recipe-images/chicken-parmigiana.jpeg" width="375" height="250" alt="Stock photo of chicken parmigiana"></p>
+    <p><img src="recipe-images/chicken-parmigiana.jpeg" width="375"
+            height="250" alt="Stock photo of chicken parmigiana"></p>
     <h2>Description</h2>
-    <p>This is an Australian favorite that your family will <em>love!</em></p>
+    <p>This is an Australian favorite that your family will
+        <em>love!</em></p>
     <h2>Ingredients</h2>
     <p>
-        <ul>
-            <li>1 egg, beaten</li>
-            <li>2 ounces dry bread crumbs</li>
-            <li>2 skinless, boneless chicken breast halves</li>
-            <li>¾ (16 ounce) jar spaghetti sauce</li>
-            <li>2 ounces shredded mozzarella cheese</li>
-            <li>¼ cup grated Parmesan cheese</li>
-        </ul>
+    <ul>
+        <li>1 egg, beaten</li>
+        <li>2 ounces dry bread crumbs</li>
+        <li>2 skinless, boneless chicken breast halves</li>
+        <li>¾ (16 ounce) jar spaghetti sauce</li>
+        <li>2 ounces shredded mozzarella cheese</li>
+        <li>¼ cup grated Parmesan cheese</li>
+    </ul>
     </p>
-    <p><h3>Steps:</h3></p>
+    <p>
+    <h3>Steps:</h3>
+    </p>
     <ol>
-        <li>Preheat the oven to 350 degrees F (175 degrees C). Lightly grease a medium baking sheet.</li>
-        <li>Pour egg into a small shallow bowl. Place bread crumbs in a separate shallow bowl. Dip chicken into egg, then into bread crumbs. Place coated chicken on the prepared baking sheet.</li>
-        <li>Bake in the preheated oven until no longer pink and juices run clear, about 40 minutes. Remove from the oven.</li>
-        <li>Pour 1/2 of the spaghetti sauce into a 7x11-inch baking dish. Place chicken breasts over the sauce, then cover with remaining sauce. Sprinkle mozzarella and Parmesan cheeses on top. Continue baking until heated through and cheeses have melted, about 20 more minutes.</li>
+        <li>Preheat the oven to 350 degrees F (175 degrees C). Lightly
+            grease a medium baking sheet.</li>
+        <li>Pour egg into a small shallow bowl. Place bread crumbs in a
+            separate shallow bowl. Dip chicken into egg, then into bread
+            crumbs. Place coated chicken on the prepared baking sheet.
+        </li>
+        <li>Bake in the preheated oven until no longer pink and juices
+            run clear, about 40 minutes. Remove from the oven.</li>
+        <li>Pour 1/2 of the spaghetti sauce into a 7x11-inch baking
+            dish. Place chicken breasts over the sauce, then cover with
+            remaining sauce. Sprinkle mozzarella and Parmesan cheeses on
+            top. Continue baking until heated through and cheeses have
+            melted, about 20 more minutes.</li>
         <li>Ready to serve alongside some mash potato and veggies!</li>
     </ol>
 </body>
+
 </html>
