--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>Recipe Project</title>
 </head>
 <body>
-    <h1>Recipes</h1>
-    <a href="recipes/chicken-parmigiana.html">Chicken Parmigiana</a>
+  <h1>Recipes</h1>
+    <ul>
+     <li><a href="recipes/chicken-parmigiana.html">Chicken Parmigiana</a></li> 
+     <li><a href="recipes/pizza.html">Pizza</a></li>
+     <li><a href="recipes/spaghetti.html">Spaghetti</a></li>
+    </ul>
+
 </body>
 </html>
