--- a/recipes/chicken-parmigiana.html
+++ b/recipes/chicken-parmigiana.html
@@ -7,10 +7,11 @@
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
     <title>Chicken Parmigiana Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
-    <h1>Chicken Parmigiana</h1>
+    <h2>Chicken Parmigiana</h2>
     <a href="../index.html">Home</a>
     <p><img src="recipe-images/chicken-parmigiana.jpeg" width="375"
             height="250" alt="Stock photo of chicken parmigiana"></p>
