--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -7,6 +7,7 @@
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
     <title>Pizza Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
@@ -34,7 +35,7 @@
     </ul>
     </p>
     <p>
-    <h3>Steps:</h3>
+    <h2>Steps:</h2>
     </p>
     <ol>
         <li>Preheat oven to 220C, Line pizza pan with baking paper and
