--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -7,6 +7,7 @@
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
     <title>Spaghetti Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
@@ -32,7 +33,7 @@
     </ul>
     </p>
     <p>
-    <h3>Steps:</h3>
+    <h2>Steps:</h2>
     </p>
     <ol>
         <li>Heat oil in a large saucepan over medium heat, add onion and
