Style all pages
All html pages linked and styled to follow the same style
-added multiple classes
-styled all pages

--- a/recipes/chicken-parmigiana.html
+++ b/recipes/chicken-parmigiana.html
@@ -13,14 +13,14 @@
 <body>
     <h2>Chicken Parmigiana</h2>
     <a href="../index.html">Home</a>
-    <p><img src="recipe-images/chicken-parmigiana.jpeg" width="375"
+    <p><img class="img" src="recipe-images/chicken-parmigiana.jpeg" width="375"
             height="250" alt="Stock photo of chicken parmigiana"></p>
     <h2>Description</h2>
-    <p>This is an Australian favorite that your family will
+    <p class="desc">This is an Australian favorite that your family will
         <em>love!</em></p>
     <h2>Ingredients</h2>
     <p>
-    <ul>
+    <ul class="ul">
         <li>1 egg, beaten</li>
         <li>2 ounces dry bread crumbs</li>
         <li>2 skinless, boneless chicken breast halves</li>
@@ -30,7 +30,7 @@
     </ul>
     </p>
     <p>
-    <h3>Steps:</h3>
+    <h2>Steps:</h2>
     </p>
     <ol>
         <li>Preheat the oven to 350 degrees F (175 degrees C). Lightly
