--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -13,14 +13,14 @@
 <body>
     <h1>Pizza</h1>
     <a href="../index.html">Home</a>
-    <p><img src="recipe-images/pizza.jpg" width="375" height="250"
+    <p><img class="img" src="recipe-images/pizza.jpg" width="375" height="250"
             alt="Stock photo of pizza"></p>
     <h2>Description</h2>
-    <p>This is an Italian-American favorite that your family will
+    <p class="desc">This is an Italian-American favorite that your family will
         <em>love!</em></p>
     <h2>Ingredients</h2>
     <p>
-    <ul>
+    <ul class="ul">
         <li>Canola oil spray</li>
         <li>1 pizza base (thin crust)</li>
         <li>1 tbsp olive oil</li>
