--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -13,14 +13,14 @@
 <body>
     <h1>Spaghetti</h1>
     <a href="../index.html">Home</a>
-    <p><img src="recipe-images/spaghetti.jpg" width="375" height="250"
+    <p><img class="img" src="recipe-images/spaghetti.jpg" width="375" height="250"
             alt="Stock photo of spaghetti"></p>
     <h2>Description</h2>
-    <p>This is an Italian favorite that your family will <em>love!</em>
+    <p class="desc">This is an Italian favorite that your family will <em>love!</em>
     </p>
     <h2>Ingredients</h2>
     <p>
-    <ul>
+    <ul class="ul">
         <li>2 tbsp olive oil, plus extra to toss</li>
         <li>1 onion, finely chopped</li>
         <li>3 garlic cloves, crushed</li>
