--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
   <h1>Recipes</h1>
-    <ul>
-     <li><a href="recipes/chicken-parmigiana.html">Chicken Parmigiana</a></li> 
-     <li><a href="recipes/pizza.html">Pizza</a></li>
-     <li><a href="recipes/spaghetti.html">Spaghetti</a></li>
+    <ul class="ul-class">
+     <p><li><a href="recipes/chicken-parmigiana.html">Chicken Parmigiana</a></li></p>
+     <p><li><a href="recipes/pizza.html">Pizza</a></li></p>
+     <p><li><a href="recipes/spaghetti.html">Spaghetti</a></li></p>
     </ul>
 
 </body>
